--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,7 +141,11 @@ a.btn.btn-danger:hover{
   width: 100%;
   height: 200px;
   /* background-color: black; */
-  background-image: url("./Images/cover1.jpg");
+  /* background-image: url("./Images/cover1.jpg"); */
+  background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  background-position: right center;
+  background-image: url("./Images/nav-bg.png");
   z-index: -1;
 }
 
