--- a/client/src/css/Chat.css
+++ b/client/src/css/Chat.css
@@ -1,71 +1,67 @@
-.chat-container{
-    /* height: 96vh; */
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 75vh 50px;
-    grid-template-areas: "header", "messages", "input";
-    padding: 0px;
-    border-radius: 18px;
-    border-left: 1px solid  #0084FF;
-    border-right: 1px solid  #0084FF;
-    background-color: white;
-
+.chat-container {
+	/* height: 96vh; */
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 50px 75vh 50px;
+	grid-template-areas: "header", "messages", "input";
+	padding: 0px;
+	border-radius: 18px;
+	border-left: 1px solid #0084ff;
+	border-right: 1px solid hsl(209, 100%, 50%);
+	background-color: white;
+	word-wrap: break-word;
 }
 
-.message-list{
-    grid-area: "messages";
-    display: flex;
-    flex-direction: column;
-    padding: 0 20px;
-    /* overflow-y: scroll; */
-    /* width: 100%; */
-    /* height: 100%; */
-    /* border-left: 1px solid  #0084FF;
+.message-list {
+	grid-area: "messages";
+	display: flex;
+	flex-direction: column;
+	padding: 0 20px;
+	/* overflow-y: scroll; */
+	/* width: 100%; */
+	/* height: 100%; */
+	/* border-left: 1px solid  #0084FF;
     border-right: 1px solid  #0084FF; */
 }
 
-.message-row{
-    display: grid;
-    grid-template-columns: 60%;
-    margin-bottom: 20px;
+.message-row {
+	display: grid;
+	grid-template-columns: 60%;
+	margin-bottom: 20px;
 }
 
-.message-row:first-child{
-    margin-top: 15px;
+.message-row:first-child {
+	margin-top: 15px;
 }
 
-.message-content{
-    display: flex;
+.message-content {
+	display: flex;
 }
 
-.outgoing{
-    justify-content: end;
-    
-    
+.outgoing {
+	justify-content: end;
 }
 
-.outgoing .message-content{
-    justify-content: flex-end;
-    /* background-color: #0048AA; */
-    background-color: #0084FF;
-    color: white;
-    padding: 8px 10px;
-    border-radius: 18px 18px 0 18px;
-
+.outgoing .message-content {
+	justify-content: flex-end;
+	/* background-color: #0048AA; */
+	background-color: #0084ff;
+	color: white;
+	padding: 8px 10px;
+	border-radius: 18px 18px 0 18px;
 }
 
-.received{
-    justify-content: start;
+.received {
+	justify-content: start;
 }
 
-.received .message-content{
-    justify-content: flex-start;
-    background-color: #f1f0f0;
-    color: #1c1e21;
-    padding: 8px 10px;
-    border-radius: 18px 18px 18px 0;
+.received .message-content {
+	justify-content: flex-start;
+	background-color: #f1f0f0;
+	color: #1c1e21;
+	padding: 8px 10px;
+	border-radius: 18px 18px 18px 0;
 }
-
 
 /* .message-text{
     background-color:  #0084FF;
@@ -76,147 +72,142 @@
 
 } */
 
+.chat-header {
+	grid-area: "header";
+	background-color: #0084ff;
+	color: white;
+	font-weight: bold;
+	border-top-left-radius: 18px;
+	border-top-right-radius: 18px;
 
-.chat-header{
-    grid-area: "header";
-    background-color:  #0084FF;
-    color: white;
-    font-weight: bold;
-    border-top-left-radius: 18px;
-    border-top-right-radius: 18px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    /* margin: 25px; */
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 15px;
+	/* margin: 25px; */
 }
 
-.chat-header p{
-    /* margin-top: 10px;
+.chat-header p {
+	/* margin-top: 10px;
     margin-bottom: px; */
-    margin: 10px 5px;
-    font-size: 1.2rem;
-    
+	margin: 10px 5px;
+	font-size: 1.2rem;
 }
 
-.chat-input{
-    grid-area: "input";
-    border-bottom: 1px solid  #0084FF;
-    /* border-top: 1px solid  #0084FF; */
-    /* border: 1px solid  #0084FF; */
-    border-bottom-left-radius: 18px;
-    border-bottom-right-radius: 18px;
-    display: flex;
-    align-items: center;
-    /* grid-template-columns: ; */
+.chat-input {
+	grid-area: "input";
+	border-bottom: 1px solid #0084ff;
+	/* border-top: 1px solid  #0084FF; */
+	/* border: 1px solid  #0084FF; */
+	border-bottom-left-radius: 18px;
+	border-bottom-right-radius: 18px;
+	display: flex;
+	align-items: center;
+	/* grid-template-columns: ; */
 }
 
-.chat-input .inputs{
-    flex: 90%;
-    border-radius: 18px;
-    border: 1px solid black;
-    margin-left: 2px;
-    display: flex;
-    /* justify-content: space-between; */
-    align-items: center;
+.chat-input .inputs {
+	flex: 90%;
+	border-radius: 18px;
+	border: 1px solid black;
+	margin-left: 2px;
+	display: flex;
+	/* justify-content: space-between; */
+	align-items: center;
 }
 
-.chat-input .submit{
-    flex: 5%;
-    text-align: center;
+.chat-input .submit {
+	flex: 5%;
+	text-align: center;
 }
 
-.chat-input .inputs input{
-    flex: 90%;
-    height: 100%;
-    outline: none;
-    text-decoration: none;
-    border: none;
-    border-radius: 18px;
-    /* background-color: #e6ecf0; */
-    border-bottom-left-radius: 18px;
-    border-bottom-right-radius: 18px;
-    padding: 10px;
+.chat-input .inputs input {
+	flex: 90%;
+	height: 100%;
+	outline: none;
+	text-decoration: none;
+	border: none;
+	border-radius: 18px;
+	/* background-color: #e6ecf0; */
+	border-bottom-left-radius: 18px;
+	border-bottom-right-radius: 18px;
+	padding: 10px;
 }
-
 
 /* Scrollbar Styles */
 
-::-webkit-scrollbar-track
-{
+::-webkit-scrollbar-track {
 	background-color: #f1f0f0;
 }
 
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
 	width: 6px;
 	background-color: #f1f0f0;
 }
 
-::-webkit-scrollbar-thumb
-{
-	background-color: #0084FF;
+::-webkit-scrollbar-thumb {
+	background-color: #0084ff;
 }
-
 
 /* Loader styles */
 .loader > div {
-    
+	width: 18px;
+	height: 18px;
+	background-color: #0084ff;
 
-    width: 18px;
-    height: 18px;
-    background-color: #0084FF;
-
-    border-radius: 100%;
-    display: inline-block;
-    -webkit-animation: sbouncedelay 1.4s infinite ease-in-out both;
-    animation: bouncedelay 1.4s infinite ease-in-out both;
+	border-radius: 100%;
+	display: inline-block;
+	-webkit-animation: sbouncedelay 1.4s infinite ease-in-out both;
+	animation: bouncedelay 1.4s infinite ease-in-out both;
 }
-  
+
 .loader .bounce1 {
-    -webkit-animation-delay: -0.32s;
-    animation-delay: -0.32s;
+	-webkit-animation-delay: -0.32s;
+	animation-delay: -0.32s;
 }
-  
+
 .loader .bounce2 {
-    -webkit-animation-delay: -0.16s;
-    animation-delay: -0.16s;
+	-webkit-animation-delay: -0.16s;
+	animation-delay: -0.16s;
 }
-  
+
 @-webkit-keyframes bouncedelay {
-    0%, 80%, 100% { -webkit-transform: scale(0) }
-    40% { -webkit-transform: scale(1.0) }
+	0%,
+	80%,
+	100% {
+		-webkit-transform: scale(0);
+	}
+	40% {
+		-webkit-transform: scale(1.0);
+	}
 }
-  
+
 @keyframes bouncedelay {
-    0%, 80%, 100% { 
-      -webkit-transform: scale(0);
-      transform: scale(0);
-    } 40% { 
-      -webkit-transform: scale(1.0);
-      transform: scale(1.0);
-    }
+	0%,
+	80%,
+	100% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+	}
+	40% {
+		-webkit-transform: scale(1.0);
+		transform: scale(1.0);
+	}
 }
 
-
-@media(max-width: 991px){
-    .chat-input .inputs{
-        flex: 92%;
-    }
-    
+@media (max-width: 991px) {
+	.chat-input .inputs {
+		flex: 92%;
+	}
 }
 
-@media(max-width: 400px){
-    .emoji-picker{
-        display: none;
-        font-size: 14px;
-    }
+@media (max-width: 400px) {
+	.emoji-picker {
+		display: none;
+		font-size: 14px;
+	}
 
-    .submit{
-        font-size: 12px;
-    }
-
-    
-    
+	.submit {
+		font-size: 12px;
+	}
 }
